# hello_world_slint_rust

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
ui/: app-window.slint
