[package]
name = "hello_world_slint_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
gpio-cdev = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
slint = {version = "1.14.1", default-features = false, features = ["backend-linuxkms-noseat", "renderer-software"] }

[build-dependencies]
slint-build = "1.14.1"
