[package]
name = "hello_world_slint_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"          # small binaries for embedded
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[dependencies]
slint = "1.14.1"
gpio-cdev = "0.6"

[target.armv7-unknown-linux-gnueabi.dependencies]      # soft float
slint = { version = "1.14.1", default-features = false, features = ["backend-linuxkms-noseat", "renderer-software"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]    # hard float
slint = { version = "1.14.1", default-features = false, features = ["backend-linuxkms-noseat", "renderer-software"] }

[build-dependencies]
slint-build = "1.14.1"
